--- a/blog.html
+++ b/blog.html
@@ -26,26 +26,28 @@
           </ul>
         </nav>
       </header>
-      <header class="header-hamburger">
-        <nav class="hamburger">
-          <h1 class="logo">
-            <a href="index.html"
-              ><img src="./img/logo.svg" alt="Noel.logo"
-            /></a>
-          </h1>
-          <button type="button" class="hamburger-btn">
-            <span class="material-symbols-outlined hamburger-icon"> menu </span>
-            <span class="material-symbols-outlined closure close"> close </span>
-          </button>
-          <ul class="hamburger-list close">
-            <li class="mb-8"><a href="index.html">首頁</a></li>
-            <li class="mb-8"><a href="work.html">作品集</a></li>
-            <li class="mb-8"><a href="service.html">服務項目</a></li>
-            <li class="mb-8"><a href="blog.html">部落格</a></li>
-            <li><a href="contact.html">聯絡我</a></li>
-          </ul>
-        </nav>
-      </header>
+    </div>
+    <header class="header-hamburger">
+      <nav class="hamburger">
+        <h1 class="logo">
+          <a href="index.html"
+            ><img src="./img/logo.svg" alt="Noel.logo"
+          /></a>
+        </h1>
+        <button type="button" class="hamburger-btn">
+          <span class="material-symbols-outlined hamburger-icon"> menu </span>
+          <span class="material-symbols-outlined closure close"> close </span>
+        </button>
+        <ul class="hamburger-list close">
+          <li class="mb-8"><a href="index.html">首頁</a></li>
+          <li class="mb-8"><a href="work.html">作品集</a></li>
+          <li class="mb-8"><a href="service.html">服務項目</a></li>
+          <li class="mb-8"><a href="blog.html">部落格</a></li>
+          <li><a href="contact.html">聯絡我</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="container">
       <section class="banner">
         <div class="banner-content">
           <h2 class="fw-semi-bold text-center letter-spacing mb-8">
