--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
     <div class="container">
       <main class="article">
         <section class="article-list">
-          <article class="mb-16" id="article1">
+          <article class="mb-16">
             <img
               src="./img/article-image1.png"
               alt="Vision Pro 登場！Vision Pro UI/UX 設計重點大公開 (上)"
@@ -130,7 +130,7 @@
               </p>
             </header>
           </article>
-          <article class="mb-16" id="article2">
+          <article class="mb-16">
             <img
               src="./img/article-image4.png"
               alt="虛擬實境 (VR) 介面設計對使用者沈浸感影響的研究"
@@ -165,7 +165,7 @@
               </p>
             </header>
           </article>
-          <article id="article4">
+          <article>
             <img
               src="./img/article-image6.png"
               alt="React vs. Vue，哪種前端框架比較好用？從三大面向談起"
@@ -185,10 +185,10 @@
         <section class="sidebar">
           <p class="fs-5 border-bottom">全部文章</p>
           <ul class="menu">
-            <li class="menu-link"><a href="#article1">UI/UX 新知</a></li>
-            <li class="menu-link"><a href="#article2">數位產品設計</a></li>
-            <li class="menu-link"><a href="#article3">平面設計</a></li>
-            <li class="menu-link"><a href="#article4">前端開發</a></li>
+            <li class="menu-link"><a href="#">UI/UX 新知</a></li>
+            <li class="menu-link"><a href="#">數位產品設計</a></li>
+            <li class="menu-link"><a href="#">平面設計</a></li>
+            <li class="menu-link"><a href="#">前端開發</a></li>
           </ul>
         </section>
       </main>
@@ -231,6 +231,7 @@
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
+    <script src="./JS/blog.js"></script>
     <script src="./JS/all.js"></script>
   </body>
 </html>
