--- a/blog.html
+++ b/blog.html
@@ -183,8 +183,8 @@
           </article>
         </section>
         <section class="sidebar">
-          <p class="fs-5 border-bottom">全部文章</p>
           <ul class="menu">
+            <li class="menu-link"><a href="#" class="border-bottom">全部文章</a></li>
             <li class="menu-link"><a href="#">UI/UX 新知</a></li>
             <li class="menu-link"><a href="#">數位產品設計</a></li>
             <li class="menu-link"><a href="#">平面設計</a></li>
