--- a/contact.html
+++ b/contact.html
@@ -55,19 +55,19 @@
             <a href="mailto:service@hexschool.com" class="text-primary-500">service@hexschool.com</a>
           </header>
           <ul class="footer-sociality">
-            <li class="border-1-primary-400 mb-6 btn active">
+            <li class="border-1-primary-400 mb-6 footer-btn active">
               <a href="#">
                 <img src="./img/list.svg" alt="填寫表單">
                 <p class="fs-5">填寫表單</p>
               </a>
             </li>
-            <li class="border-1-primary-400 mb-6 btn">
+            <li class="border-1-primary-400 mb-6 footer-btn">
               <a href="#">
                 <img src="./img/instagram.svg" alt="hexschool_demo">
                 <p class="fs-5">hexschool_demo</p>
               </a>
             </li>
-            <li class="border-1-primary-400 mb-6 btn">
+            <li class="border-1-primary-400 mb-6 footer-btn">
               <a href="#">
                 <img src="./img/facebook.svg" alt="hexschoolTW">
                 <p class="fs-5">hexschoolTW</p>
