update RWD banner+ footer

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
       </nav>
     </header>
     <main>
-      <div class="home-banner-bg">
-        <div class="container">
+      <div class="home-banner">
           <section class="home-banner-content">
             <h2 class="fs-1 mb-6">Hi！我是 Noel</h2>
             <div class="mb-4">
@@ -77,10 +76,14 @@
               </li>
             </ul>
           </section>
-        </div>
+          <div class="home-banner-bg">
+            <img src="./img/hero-lg.png" alt="Noel">
+            
+            <!-- <img alt="Hero 圖片"> -->
+          </div>
       </div>
 
-      <section class="work-introduction">
+      <!-- <section class="work-introduction">
         <header class="header-title">
           <div class="title-deco-left"></div>
           <h2 class="letter-spacing">作品介紹</h2>
@@ -179,7 +182,7 @@
           <h2 class="letter-spacing">精選文章</h2>
           <div class="title-deco-right"></div>
         </header>
-      </section>
+      </section> -->
     </main>
     <footer>
       <div class="container">
